Searching bugfix, pendududk jump, penduduk index

--- a/public/style/specific/kk/index.css
+++ b/public/style/specific/kk/index.css
@@ -2,3 +2,8 @@ form input{
   width: 100%;
   padding: 5px 7px !important;
 }
+
+table th,
+table td{
+  white-space: nowrap;
+}
